--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 dj-rest-auth==2.2.3
 Django==4.0.2
 django-allauth==0.48.0
+django-cors-headers==3.11.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 idna==3.3
